fix layout bug

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,9 +1,13 @@
 .layout{
     background: white;
     font-family: IBM Plex Sans Thai;
+    height: 100vh;
+    min-height: auto;
+    overflow: auto;
   }
   .content{
     background: white;
     padding:30px 96px;
     height: calc(100vh - 80px);
+    
   }
