--- a/src/components/Layout/Sidebar/Sidebar.module.scss
+++ b/src/components/Layout/Sidebar/Sidebar.module.scss
@@ -16,7 +16,7 @@
 }
 
 .container {
-  height: 100vh;
+  height: 100%;
   background-color: $color-primary-carrot;
  
   h5{
@@ -94,6 +94,7 @@
 
   &Admin {
     height: 100vh;
+  
     background-color: $color-primary-turquoise;
     
     .menu {
