--- a/src/pages/Sandbox/Sandbox.module.scss
+++ b/src/pages/Sandbox/Sandbox.module.scss
@@ -1,5 +1,6 @@
 .container {
-  width: 80vw;
+  //width: 80vw;
+  width: 100%;
   padding-top: 2rem;
   margin: auto;
   display: flex;
